# hra-corridor-generation-gpu

./: .gitignore  README.md  server.sh
model/test_organ/CUBOID/: pyramid.off
src/: CMakeLists.txt  corridor.cpp  corridor.cu  main.cu  point_in_polyhedron.cu  server2.cpp  server_spatial_index.cpp  test_aabbtree.cpp
src/corridor_cpu/: aabbtree.h  corridor_cpu.cpp
src/corridor_gpu/: aabbtree_gpu.h  corridor.cu  corridor.cuh  corridor_with_spatial_index.cu  corridor_with_spatial_index.cuh
src/geometry/: mymesh.cpp  mymesh.h  utils.cpp
src/include/: corridor.cuh  corridor.h  pip_helpers.cuh
src/index/: aabbtree.h
